RESOLVED FIXED59375
Fix strict OwnPtrs in ContextMenuController.cpp
https://bugs.webkit.org/show_bug.cgi?id=59375
Summary Fix strict OwnPtrs in ContextMenuController.cpp
David Levin
Reported 2011-04-25 16:07:44 PDT
Fix strict OwnPtrs in ContextMenuController.cpp
Attachments
Patch (2.29 KB, patch)
2011-04-25 16:08 PDT, David Levin
no flags
Patch (2.26 KB, patch)
2011-04-25 16:13 PDT, David Levin
kbr: review+
David Levin
Comment 1 2011-04-25 16:08:36 PDT
Adam Barth
Comment 2 2011-04-25 16:10:05 PDT
Comment on attachment 90980 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90980&action=review > Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!) OOPS! > Source/WebCore/page/ContextMenuController.cpp:126 > - return 0; > + return adoptPtr<ContextMenu>(0); PassOwnPtr<ContextMenu>()
David Levin
Comment 3 2011-04-25 16:13:37 PDT
Kenneth Russell
Comment 4 2011-04-25 16:15:11 PDT
Comment on attachment 90985 [details] Patch Looks good to me.
David Levin
Comment 5 2011-04-26 00:32:30 PDT
Note You need to log in before you can comment on or make changes to this bug.