Fix strict OwnPtrs in ContextMenuController.cpp https://bugs.webkit.org/show_bug.cgi?id=59375

Reviewed by Kenneth Russell.

* page/ContextMenuController.cpp:
(WebCore::ContextMenuController::createContextMenu):
(WebCore::separatorItem):

Canonical link: https://commits.webkit.org/74556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84829 268f45cc-cd09-0410-ab3c-d52691b4dbfc